--- a/jogos/templates/jogo_quiz.html
+++ b/jogos/templates/jogo_quiz.html
@@ -1,13 +1,70 @@
-{% extends "base.html" %}   
+{% extends "base.html" %}
 {% load static %}
 
 {% block 'head'%}
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
+
 <script>
+  var selectedOption = 0;
+ 
+  const select = document.getElementById('options');
+    const modal = document.getElementById('modal');
+    const modalText = document.getElementById('modal-text');
+    const closeButton = document.getElementById('close-btn');
+    const confirmButton = document.getElementById('confirm-btn');
+
+    // Função para abrir o modal e exibir a opção selecionada
+    function openModalAcerto() {
+      //const selectedOption = select.options[select.selectedIndex].text;
+      //if (select.value) { // Verifica se uma opção foi selecionada
+        //modalText.textContent = 'Você escolheu:';//`Você escolheu: ${selectedOption}`;
+       // modal.style.display = 'flex'; // Exibe o modal
+        document.getElementById('modalAcerto').style.display = 'flex';
+        //closeButton.focus(); // Define o foco no botão "Fechar"
+        document.getElementById('close-btnA').focus(); // Define o foco no botão "Fechar"
+     // } else {
+     //   alert("Por favor, selecione uma opção antes de confirmar."); // Alerta caso nenhuma opção tenha sido selecionada
+     // }
+    }
+
+    function openModalErro() {
+      //const selectedOption = select.options[select.selectedIndex].text;
+      //if (select.value) { // Verifica se uma opção foi selecionada
+        //modalText.textContent = 'Você escolheu:';//`Você escolheu: ${selectedOption}`;
+       // modal.style.display = 'flex'; // Exibe o modal
+        document.getElementById('modalErro').style.display = 'flex';
+        //closeButton.focus(); // Define o foco no botão "Fechar"
+        document.getElementById('close-btnE').focus(); // Define o foco no botão "Fechar"
+     // } else {
+     //   alert("Por favor, selecione uma opção antes de confirmar."); // Alerta caso nenhuma opção tenha sido selecionada
+     // }
+    }
+
+    // Função para fechar o modal
+    function closeModal() {
+      document.getElementById('modalAcerto').style.display = 'none';
+      document.getElementById('modalErro').style.display = 'none';
+      //modal.style.display = 'none';
+      //confirmButton.focus(); // Retorna o foco para o botão de confirmação após fechar o modal
+    }
+
+    // Evitar que o foco saia do modal enquanto estiver aberto
+    document.addEventListener('keydown', (event) => {
+      if (document.getElementById('modalAcerto').style.display === 'flex' || document.getElementById('modalErro').style.display === 'flex'){ // Se o modal estiver aberto
+        if (event.key === 'Tab') { // Detecta a tecla Tab
+          event.preventDefault(); // Impede a navegação padrão
+          closeButton.focus(); // Mantém o foco no botão "Fechar"
+        } else if (event.key === 'Escape') { // Fechar o modal com a tecla Esc
+          closeModal();
+        }
+      }
+    });
+
+  // Função responsável por validar se houve resposta e indicar erro ou acerto
   function validarformQuiz(event) {
-    event.preventDefault();
+    event.preventDefault();    
     if (document.getElementById('opcao1').checked==false && document.getElementById('opcao2').checked==false && document.getElementById('opcao3').checked==false && document.getElementById('opcao4').checked==false && document.getElementById('opcao5').checked==false) {
         alert("Por favor, selecione uma opção.");
         return false;
@@ -19,74 +76,27 @@
       if(document.getElementById('opcao3').checked){a = parseInt(document.getElementById('opcao3').value);}
       if(document.getElementById('opcao4').checked){a = parseInt(document.getElementById('opcao4').value);}
       if(document.getElementById('opcao5').checked){a = parseInt(document.getElementById('opcao5').value);}
-
+      selectedOption = a;
       if(a == parseInt(document.getElementById('resposta').value)){       
-        showAcerto();
+        openModalAcerto();
         document.getElementById('id_qt_pontos').value = parseInt(document.getElementById('id_qt_pontos').value) + 1;
         document.getElementById('id_qt_acerto').value = parseInt(document.getElementById('id_qt_acerto').value) + 1;
       }else
       {
-        showErro();
+        openModalErro();
         document.getElementById('id_qt_erro').value = parseInt(document.getElementById('id_qt_erro').value) + 1;
       }
       document.getElementById('id_num_questao').value = parseInt(document.getElementById('id_num_questao').value) + 1; 
-    }
-    document.getElementById('formQuiz').submit();
+    }    
   }
-
-  function showAcerto() {
-    const somMensagem = document.getElementById('som-acerto');
-    document.getElementById('fundo-modal').style.display = 'block';
-    document.getElementById('mensagem-acerto').style.display = 'block';
-    somMensagem.play();
-    setTimeout(function() {
-      document.getElementById('fundo-modal').style.display = 'none';
-      document.getElementById('mensagem-acerto').style.display = 'none';
-    }, 100000);
-  };  
-
-  function showErro() {
-    const somMensagem = document.getElementById('som-erro');
-    document.getElementById('fundo-modal').style.display = 'block';
-    document.getElementById('mensagem-erro').style.display = 'block';
-    somMensagem.play();
-    setTimeout(function() {
-      document.getElementById('fundo-modal').style.display = 'none';
-      document.getElementById('mensagem-erro').style.display = 'none';
-    }, 100000);
-  };   
 </script>
+
+
 <style type="text/css">  
-  .divTemplateTitulo{
-    flex: 1; 
-    width: 100%;
-    height:50px;
-    background-image: linear-gradient(to bottom, #1D7D86, #66CCA4);    
-    /*background-color: #1D7D86;*/
-    border: 1px solid #ccc;
-    font-size:22px;
-    color: #15EDA3;
-    font-weight:bold;
-    border-bottom-left-radius: 13px;
-    border-bottom-right-radius: 13px;
-    border: 1px solid #ccc;
-    padding: 7px; 
-    padding-left:16px;           
-    margin: 0px;
-  }   
-  .divTemplateConteudo{
-    border-left: 1px solid #ccc;
-    border-right: 1px solid #ccc;
-    padding:16px;
-    margin: 0px;
-    height:100tw;
-    overflow:auto;            
-  }  
   .divTemplateConteudoTopo{
     background-color:#D9D9D9;    
-    /*padding-top:10px;         */
-    padding:0px 10px 10px 10px; 
-    margin-bottom:16px;    
+    padding:0px 4px 4px 4px; 
+    margin:3px 2px 8px 3px;    
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -94,8 +104,8 @@
 
   .divTemplateConteudoTopoDetalhe{
     background-color:#F5F5F5;    
-    margin-top:10px;    
-    padding:10px 10px 5px 5px;
+    margin-top:5px;    
+    padding:5px 5px 5px 5px;
     width:100px; 
     align:center; 
     display: flex;
@@ -103,11 +113,11 @@
   } 
     
   .divTemplateConteudoTopoDetalhe label{    
-    /*display: block;
-    text-align: center; */
+    font-size:16px;
   }
 
   .divTemplateConteudoTopoDetalhe input[type="text"]{
+    border:1px solid green;
     width:90px;
     border:0;    
     color: #E71BD2;    
@@ -116,50 +126,59 @@
     text-align: center;
     font-size: 20px}
 
-  .divTemplateConteudoBotao{
+  .divTemplateConteudoBotao{    
     padding-top:16px;         
     padding-bottom:0px; 
     margin-bottom:-6px;
   }  
   
-  #fundo-modal {
+
+  /* Estilo básico para o modal */
+  .modal {
+    display: none; /* Oculta o modal inicialmente */
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 1;
-  }
-
-  .mensagem{    
-    position: fixed;
-    top: 50%;
-    left: 50%;
+    justify-content: center;
     align-items: center;
-    justify-content: center;    
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    /* Adicione mais estilos aqui conforme necessário */
+  }
+  .modal-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    width: 300px;
+    justify-content: center;
+    align-items: center;
+  }
+  .close-btn {
+    margin-top: 15px;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
   }
 </style>
 {% endblock %}
 
 {% block 'title' %}Q U I Z{% endblock %}
 
-{% block 'dashboard' %}{% endblock %}
-
 {% block 'body' %}
-  <div class="container" style="padding-top:3%;padding-bottom:3%">
-    <div class="divTemplateTitulo">Q U I Z</div>
-    
+
+    <div class="divTemplateTitulo" role="title" tabindex="0" aria-label="Responda nosso Quiz!"><h1 tabindex="-1" ><i class="fa fa-gamepad"></i> Q U I Z</h1></div>
         
         
         <form id ="formQuiz" action="{% url 'jogo_quiz' %}" method="POST" >{% csrf_token %}
           <div class="divTemplateConteudo">
+  <div style="display:flex;flex-direction: column;">            
             <div class="divTemplateConteudoTopo">     
               <div class="divTemplateConteudoTopoDetalhe">                  
-                <label for="id_qt_partida">Partida:</label>
+                <label for="id_qt_partida" aria-label="Partida Número">Partida:</label>
                 <input type="text" name="id_qt_partida" maxlength="15" style="color: #E71BD2" id="id_qt_partida" value="{{ id_qt_partida }}" readonly>
               </div>
               <div class="divTemplateConteudoTopoDetalhe">                  
@@ -185,43 +204,53 @@
               
               <div class="divTemplateConteudoTopoDetalhe" style="padding:5px;">
                 <div class="container" style="margin-bottom:2px;height:63px" >
-                  <img style="width:100%;height:100%;object-fit:cover;border-radius:50%" src="{% static '/img/indio.png' %}" alt="Jogador Anônimo" title="Foto Jogador Anônimo">
+                  <img style="width:100%;height:100%;object-fit:cover;border-radius:50%" src="{% static '/img/imgAnonimo1.png' %}" alt="Jogador Anônimo" title="Foto Jogador Anônimo">
                 </div>
                 <input type="text" name="nm_jogador" maxlength="30" style="color:#000;font-size:12px;height:15px" id="id_nm_jogador_" value="{{ nm_avatar}}" readonly>
-              </div>      
-              
-              
-              
+              </div>
             </div>
 
-            
-            <div id="fundo-modal" style="display:none;"></div>
-            <div id="mensagem-acerto" class="mensagem"style="display:none;">
-              <p style="font-family: 'Poetsen One', sans-serif; color: #00DF4C; font-size:50px">Você acertou  !!!</p>
-              <img onclick= "alert('Sebastião');" src="{% static '/img/indioSorrindo.jpeg' %}" style="heigh:200px; width:300px" alt="Acertou">
-              <audio id="som-acerto" src="{% static '/img/Acerto.mp3' %}"></audio>
-            </div>
-            <div id="mensagem-erro" class="mensagem"style="display:none;">
-              <p style="font-family: 'Poetsen One', sans-serif; color: #DF0000; font-size:50px">Você errou !!!</p>
-              <img src="{% static '/img/indiaChorando.jpeg' %}" style="heigh:200px; width:300px" alt="Acertou">
-              <audio id="som-erro" src="{% static '/img/Erro.mp3' %}"></audio>
-            </div>
+             <!-- Modal com acessibilidade -->
+              <div id="modalAcerto" class="modal" role="dialog" aria-labelledby="modal-text" aria-modal="true">
+                <div class="modal-content">
+                  <img aria-hidden="true" src="{% static '/img/indioSorrindo.jpeg' %}" style="heigh:100px; width:200px" alt="Acertou">
+                  <p id="modal-text" aria-live="assertive"><b>Você acertou. {{ frase_Acerto }}</b> </p>
+                  <p> A resposta correta foi: <span style="color:blue"> {{ Pergunta.ds_frase_idioma_2 }}</span></p>
+                  <button id="close-btnA" class="close-btn">Fechar</button>
+                </div>
+              </div>
 
+              <div id="modalErro" class="modal" role="dialog" aria-labelledby="modal-text" aria-modal="true">
+                <div class="modal-content">
+                  <img aria-hidden="true" src="{% static '/img/indiaChorando.jpeg' %}" style="heigh:100px; width:200px; margin-bottom:3px;" alt="Acertou">
+                  <p id="modal-text" aria-live="assertive"><b>{{frase_Erro}}</b> </p>
+                  <p> A resposta correta seria: <span style="color:blue"> {{ Pergunta.ds_frase_idioma_2 }}</span></p>
+                  <button id="close-btnE" class="close-btn">Fechar</button>
+                </div>
+              </div>   
+            <!-- Modal com acessibilidade -->
+            <div role="group" aria-labelledby="pergunta"style="ul,li{color:black};margin-left:5px">
+              
+              <p id="pergunta" tabindex="0" style="font-size:18px;color:black;">Como se diz em Tupi <span style="font-size:20px;color:black;font-weight:bold;">“{{ Pergunta.ds_frase_idioma_1 }}”</span> ?</p>
+              <input type="hidden" name="resposta" id="resposta" value="{{ Pergunta.id_frase }}">
+              <ul role="radiogroup" aria-required="true" style="list-style-type: none;">
+              {% for item in Respostas%}
+                <li role="radio" aria-checked="false" tabindex="0"style="font-size:18px;color:black;">
+                  <label for="opcao{{ forloop.counter }}">
+                  <input type="radio" id="opcao{{ forloop.counter }}" name="opcoes" value="{{ item.id_frase }} " tabindex="0"> <span > {{ item.ds_frase_idioma_2 }}</span>
+                  </label>         
+                  
+               
+                </li>
+              {% endfor%}
+              </ul>
+              
 
- 
-            <p style="font-size:18px;color:black;">Como se diz em Tupi <span style="font-size:20px;color:black;font-weight:bold;">“{{ Pergunta.ds_frase_idioma_1 }}”</span> ?</p>
-            <input type="hidden" name="resposta" id="resposta" value="{{ Pergunta.id_frase }}">
-            {% for item in Respostas%}
-              <label for="opcao{{ forloop.counter }}">
-              <input type="radio" id="opcao{{ forloop.counter }}" name="opcoes" value="{{ item.id_frase }} ">{{ item.ds_frase_idioma_2 }}
-              </label><br>
-            {% endfor%}
-            
-          <div class="divTemplateConteudoBotao">                       
+            <div class="divTemplateConteudoBotao">                 
               <input type="submit" class='btn btn-success' style="margin-right:20px" value="Responder" onclick="validarformQuiz(event);"><input type="submit" class='btn btn-primary' style="margin-right:20px" value="Pular"><button onclick="window.location.href='{% url 'home' %}'" class='btn btn-danger' style="margin-right:20px">Encerrar</button>
-          </div>
+            </div>
         </div>
         </form>
         
-  </div>    
+  
 {% endblock %}
