--- a/templates/static/css/style.css
+++ b/templates/static/css/style.css
@@ -1,6 +1,7 @@
 header{
     background-color: #127780;
-    border-left:2px solid#fff;
+    
+    margin: 0px 2px 0px 2px;
     display:flex;
     flex-direction: row;
 
@@ -12,10 +13,14 @@ header{
     ul{font-size: 15px;}
 }
 
+body{
+    width:100%;
+    height:100vh;
+}
 footer{
     background-color: #127780;            
     margin: 2px;
-    padding: 5px 2px 5cappx 2px;
+    padding: 5px 2px 5px 2px;
     border-bottom: 3px solid #fff;
     z-index: 999;
     font-size: 13px;
@@ -81,7 +86,7 @@ a:hover{
     /*border: 1px solid #ccc;*/
     padding: 4px 4px 1px 5px;     
     margin-left:2px;
-    margin-right:0px;
+    margin-right:2px;
 
     h1{
         font-size:18px;
@@ -151,7 +156,8 @@ a:hover{
     display: flex;               
     justify-content: space-around;
     flex-wrap: wrap;    
-    padding-bottom:5px;            
+    padding-bottom:5px;    
+    margin:2px;        
 }            
 
 .divFooterCol1{
@@ -175,3 +181,76 @@ a:hover{
 }
 
 .fontUpper{text-transform: uppercase}
+
+/*   Início Estilos para tela QUIZ   */
+.divTemplateConteudoTopo{
+    background-color:#D9D9D9;    
+    padding:0px 4px 4px 4px; 
+    margin:3px 2px 8px 3px;    
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }  
+
+  .divTemplateConteudoTopoDetalhe{
+    background-color:#F5F5F5;    
+    margin-top:5px;    
+    padding:5px 5px 5px 5px;
+    width:100px; 
+    align:center; 
+    display: flex;
+    flex-wrap: wrap;
+  } 
+    
+  .divTemplateConteudoTopoDetalhe label{    
+    font-size:16px;
+  }
+
+  .divTemplateConteudoTopoDetalhe input[type="text"]{
+    border:1px solid green;
+    width:90px;
+    border:0;    
+    color: #E71BD2;    
+    font-family: 'Poetsen One', sans-serif;
+    font-weight:500;
+    text-align: center;
+    font-size: 20px}
+
+  .divTemplateConteudoBotao{    
+    padding-top:16px;         
+    padding-bottom:0px; 
+    margin-bottom:-6px;
+  }  
+  
+
+  /* Estilo básico para o modal */
+  .modal {
+    display: none; /* Oculta o modal inicialmente */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+  }
+  .modal-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    width: 300px;
+    justify-content: center;
+    align-items: center;
+  }
+  .close-btn {
+    margin-top: 15px;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+/*   Fim Estilos para tela QUIZ   */
