Commit com adequações alt mensagem pop up de correção QUIZ

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,8 +65,7 @@
     
     <main>{% block 'body' %}{% endblock %}</main>
 
-	  <!-- Agrupa informações de autoria, direitos autorais, contato, 
-		   mapa do site, links e documento relacionados. -->
+	  <!-- Agrupa informações de autoria, direitos autorais, contato,  mapa do site, links e documento relacionados. -->
     <footer aria-label="Rodapé do Site" tabindex="0">
       <div class="divFooter" >
           <div class="divFooterCol1" >
